[gd_scene load_steps=4 format=2]

[ext_resource path="res://enemies/bosses/boss1/attackPattern2/AttackPattern2.gd" type="Script" id=1]
[ext_resource path="res://bullet generator/generator.tscn" type="PackedScene" id=2]
[ext_resource path="res://bullet generator/generator.gd" type="Script" id=3]

[node name="AttackPattern2" type="Node2D"]
script = ExtResource( 1 )

[node name="Generator" parent="." instance=ExtResource( 2 )]
visible = false
script = ExtResource( 3 )

[node name="PatternStartTimer" type="Timer" parent="."]
one_shot = true

[node name="PatternTimeLimit" type="Timer" parent="."]
wait_time = 25.0

[connection signal="start_bullet_pattern" from="." to="Generator" method="_on_AttackPattern2_start_bullet_pattern"]
[connection signal="timeout" from="PatternStartTimer" to="." method="_on_PatternStartTimer_timeout"]
[connection signal="timeout" from="PatternTimeLimit" to="." method="_on_PatternTimeLimit_timeout"]
